--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.database=MYSQL
+
 spring.datasource.url=jdbc:mysql://localhost/bibliotecagames?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=celerom420
@@ -6,3 +7,5 @@ spring.datasource.password=celerom420
 spring.jpa.show-sql=true
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+spring.jackson.date-format="dd/MM/yyyy"
